# mercadopagovp

./: README.md  before  pyproject.toml  setup.py  test_mp.py  verify_payment.py
mercadopagovp/: __init__.py  create_pix_payment.py  load_sdk.py  pix_payment.py  verify_pix_payment.py
mercadopagovp/error/: error_token.py
tests/: test_create_payment.py
